[tool.poetry]
name = "pontos-terminal"
version = "0.0.1.dev1"
description = "Common terminal maintained by y0urself"
authors = ["Jaspar Löchte <info@greenbone.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"

classifiers=[
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",  # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "terminal"},
  { include = "tests", format = "sdist" },
  { include = "poetry.lock", format = "sdist" },
  { include = "poetry.toml", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
colorful = "^0.5.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
autohooks = "^21.7.0"
autohooks-plugin-pylint = "^21.6.0"
autohooks-plugin-black = "^21.7.1"
black = "21.12b0"
rope = "^0.20.1"
coverage = "^6.0"
pontos = "^22.2.1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
pre-commit = ['autohooks.plugins.black', 'autohooks.plugins.pylint']
mode = "poetry"

[tool.pontos.version]
version-module-file = "terminal/__version__.py"

[tool.poetry.scripts]
terminal-example = 'terminal.example:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
